# csci-e-95-project

./: .travis.yml  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
assignments/: FinalProject.txt  ProblemSet1.txt  ProblemSet2.txt  ProblemSet3.txt  ProblemSet4.txt  ProblemSet5.txt  ProblemSet6.txt  Questionnaire.txt
doc/: Questionnaire.txt
src/: compiler.c  node.c  node.h  parser.y  scanner.lex  symbol.c  symbol.h
src/compiler/: ir.c  ir.h  main.c  node.c  node.h  parser.y  runAllTests.c  scanner.lex  symbol.c  symbol.h  type.c  type.h
src/wordcount/: Makefile  README.md  runAllTests.c  wordcount-main.c  wordcount.c  wordcount.h
tests/: runTests.sh
